day-14/Frontend/src/features/shared/nav.scss
.navbar{
    display: flex;
    flex-direction: column;
    width: 220px;
    height: 100vh;
    padding: 0.8rem 1rem;
    align-items: start;
    position: sticky;
    top: 0;

    .logo{
        width: 100%;
        padding: 0.6rem 0.8rem;
        cursor: pointer;

        .logo-img{
            height: 2rem;
        }

    }

    .container{
        height: 45vh;
        margin-top: 5rem;

        .options{
            height: 100%;
            display: flex;
            width: 180px;
            flex-direction: column;
            gap: 1.5rem;

            .option{
                display: flex;
                align-items: center;
                width: 100%;
                padding: 0.6rem 0.8rem;
                gap: 0.5rem;
                border-radius: 5px;
                cursor: pointer;

                h4{
                    position: absolute;
                    left: -7%;
                    z-index: 0;
                    opacity: 0;
                    transition: all 0.5s ease;
                }
            }

            .hover{
                background-color: var(--surface-color);
            }


            svg{
                height: 1.8rem;
                width: 1.8rem;
            }

            .profile{
                margin-top: 2.5rem;
            }

            .profile img{
                height: 2.5rem;
                border-radius: 50%;
            }     
        }

        .options:hover h4{
            left: 35%;
            opacity: 1;
        }
    }

    .setting{
        margin-top: auto;
        padding: 0.6rem 0.8rem;
        cursor: pointer;

        svg{
            height: 1.8rem;
            width: 1.8rem;
        }
    }

    .setting-box{
        margin-top: 1rem;
        width: 85%;
        height: 100px;
        border-radius: 0.5rem;
        position: absolute;
        bottom: 8%;
        display: flex;
        flex-direction: column;
        background-color: var(--surface-color);
        padding: 0 0.8rem;
        justify-content: center;
        gap: 0.5rem;

        .setting-option{
            display: flex;
            align-items: center;
            gap: 0.5rem;
            background-color: var(--surface-color);
            padding: 0.6rem 0.8rem;
            border-radius: 0.5rem;
            cursor: pointer;

            h4{
                font-size: 0.9rem;
            }
        }
        

            .light, .dark{
                height: 2rem;
                width: 2rem;
                display: flex;
                width: 100%;
                background-color: var(--surface-color);
                align-items: center;
                padding: 0.7rem 0.8rem;
                cursor: pointer;
                border-radius: 0.5rem;

                svg{
                    height: 1.2rem;
                    width: 1.2rem;
                }
            }

            .light:hover, .dark:hover{
                background-color: var(--surface-color);
            }
    }
}

